--- a/label_studio_ml/examples/tesseract/docker-compose.yml
+++ b/label_studio_ml/examples/tesseract/docker-compose.yml
@@ -20,20 +20,20 @@ services:
       # Do not use 'localhost' as it does not work within Docker containers.
       # Use prefix 'http://' or 'https://' for the URL always.
       # Determine the actual IP using 'ifconfig' (Linux/Mac) or 'ipconfig' (Windows).
-      - LABEL_STUDIO_HOST=
+      - LABEL_STUDIO_HOST=http://host.docker.internal:8080
       # specify the access token for the label studio if you use file upload
-      - LABEL_STUDIO_ACCESS_TOKEN=
+      - LABEL_STUDIO_ACCESS_TOKEN=5b51da8eb8d6819d054b44dc9bb942d097a7c416
       # set these variables to use Minio as a storage backend
-      - AWS_ACCESS_KEY_ID=your-MINIO_ROOT_USER
-      - AWS_SECRET_ACCESS_KEY=your-MINIO_ROOT_PASSWORD
+      - AWS_ACCESS_KEY_ID=admin
+      - AWS_SECRET_ACCESS_KEY=adminpassminiO
       - AWS_ENDPOINT=http://host.docker.internal:9000
 
   minio:
     container_name: minio
     image: bitnami/minio:latest
     environment:
-      - MINIO_ROOT_USER=<admin username>
-      - MINIO_ROOT_PASSWORD=<admin password>
+      - MINIO_ROOT_USER=admin
+      - MINIO_ROOT_PASSWORD=adminpassminiO
       - MINIO_API_CORS_ALLOW_ORIGIN=*
     ports:
       - 9000:9000
